src/test/ui/const-generics/issues/issue-68977.full.stderr
error: constant expression depends on a generic parameter
  --> $DIR/issue-68977.rs:34:44
   |
LL |     FxpStorageHelper<INT_BITS, FRAC_BITS>: FxpStorage,
   |                                            ^^^^^^^^^^
   |
   = note: this may fail depending on what value the parameter takes

error: aborting due to previous error

